--- a/Muhammad_Shamil_Izzah_60200122028_Kelas_A.ipynb
+++ b/Muhammad_Shamil_Izzah_60200122028_Kelas_A.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBR3l8MnN/x7saDjn6KC12",
+      "authorship_tag": "ABX9TyMoUpi5FvN5qMI038Nzj6Dv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,6 +194,33 @@
             "114  day115      60.0    108       131       367\n",
             "\n",
             "[15 rows x 5 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "subset = df.iloc[[3,9,12]]\n",
+        "print(subset)"
+      ],
+      "metadata": {
+        "id": "ORcjUeUlMCqc",
+        "outputId": "874b8277-6d34-4faa-a62a-980750b8b3a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      day  Duration  Pulse  Maxpulse  Calories\n",
+            "3    day4      45.0    109       175       282\n",
+            "9   day10      60.0     98       124       269\n",
+            "12  day13      60.0    106       128       345\n"
           ]
         }
       ]
